    + [CL] Upgrade new-package-should-not-package-python2-module from
      I: to W:. See #829744 for more info.
    + [CL] Clarify wording in new-package-should-not-package-python2-module
      to make the justification clearer.
  * checks/rules.desc:
    + [CL] Clarify wording in debian-rules-parses-dpkg-parsechangelog to
      make the justification clearer.  (Closes: #865882)
  * checks/udev.{desc,pm}:
    + [NT] New check by Petter Reinholdtsen.

  * commands/lintian.pm:
    + [NT] Attempt to clean up on SIGTERM (like with SIGINT).
  * commands/reporting-html-reports:
    + [NT] Enable re-use of the memory for the maintainer mapping once the
      log file as been parsed.
  * commands/reporting-sync-state:
    + [NT] Re-encode checksums into base64 encoded strings (from hex).
      This reduces size per checksum by about ~30% (disk and memory).  This
      reduction is also applicable to other reporting tools that loads the
      harness cache.

  * data/fields/build-profiles:
    + [NT] Add patch from Mattia Rizzolo to update the list of known build
      profiles, adding «nolua» and «noruby».
  * data/spelling/corrections:
    + [AB] Remove "iff". It's a valid English word. (Closes: #865055)

  * debian/control:
    + [NT] Add (Build-)Depends on libxml-simple-perl for the new
      appstream-metadata check.
  * debian/rules:
    + [JW, NT] Post process HTML docmentation to set the charset to UTF-8,
      which fixes mojibake in the Debian Policy Manual links.  Thanks to
      Paul Hardy for finding a solution to the problem.
      (Closes: #802721)
    + [NT] Override dh_autoreconf tools as they are not used (but need to
      scan over all files in the source package).

  * lib/Lintian/Util.pm:
    + [NT] Fix uninitialized warning if a fork call fails.

  * profiles/debian/main.profile:
    + [NT] Enable appstream-metadata + udev check by default.
      (Closes: #841670)

  * t/tests/spelling-general/debian/debian/copyright: