@@ -208,6 +208,10 @@ sub run {
             }
         }
 
+        if (/^\s*(?:export\s+)?DH_BUILD_OPTIONS\s*:?=/ && keys(%seen) == 0) {
+            tag 'debian-rules-sets-DH_BUILD_OPTIONS', "line $.";
+        }
+
         # check generic problem
         foreach my $bad_construct ($BAD_CONSTRUCT_IN_RULES->all) {
             my $badregex = $BAD_CONSTRUCT_IN_RULES->value($bad_construct);
