@@ -1,0 +1,5 @@
+Testname: debhelper-dh-build-options
+Version: 1.0
+Description: Test the value of DH_BUILD_OPTIONS
+Test-For:
+ debian-rules-sets-DH_BUILD_OPTIONS
